--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,7 @@ npm-debug.log*
 # Jupyter / Notebooks
 # =========================
 .ipynb_checkpoints/
+
+# =========================
+# API
+.env
