--- a/rag_engine/requirements.txt
+++ b/rag_engine/requirements.txt
@@ -4,7 +4,7 @@ anyio==4.12.1
 fastapi==0.115.0
 pydantic==2.10.0
 langchain-ollama==0.2.3
-google-generativeai==0.6.0
+google-genai==0.7.2
 python-dotenv==1.0.1
 python-multipart==0.0.6
 brotli==1.2.0
